fixed some little changes to message text bubbles: avatar is now amber and has a letter from the first letter of name
margin for bubble now on top and bottom
bubble now breaks words if too long

Changed fonts to Verdana

--- a/ui/src/components/messenger/MessengerBox/Message/stylesheet/MessageTextBubble.css
+++ b/ui/src/components/messenger/MessengerBox/Message/stylesheet/MessageTextBubble.css
@@ -1,14 +1,15 @@
-.message-text-bubble{
+.message-text-bubble, .message-text-bubble-user{
     background-color: #86BC25;
     color: white;
     font-size: 12pt;
     width: 60%;
     border-radius: 13px;
     padding: 20px;
-    margin-top: 20px;
-    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
     position:relative;
     font-family: Verdana;
+    word-wrap: break-word;
 }
 
 .md-tooltip-container{
@@ -16,15 +17,10 @@
     width: 100%;
 }
 
+.message-text-bubble{
+    float: left;
+}
+
 .message-text-bubble-user{
-    background-color: #86BC25;
-    color: white;
-    font-size: 12pt;
-    width: 60%;
-    border-radius: 13px;
-    padding: 20px;
-    margin-top: 20px;
     float: right;
-    position:relative;
-    font-family: Verdana;
 }
